# obsv

./: .gitignore  .infisical.json  Cargo.toml  README.md  docker-compose-old.yml  docker-compose.yml  obsv.code-workspace
.cargo/: config.toml
_eval/honeycomb/node-app/: app.ts  package-lock.json  package.json
bkup/obsv-bin/: Cargo.toml  docker-compose.yml
bkup/obsv-bin/src/: cfg.rs  lib.rs
bkup/obsv-collect/: Cargo.toml  README.md
bkup/obsv-collect/src/expt/: clickhouse.rs  file.rs  mod.rs  stdout.rs
bkup/obsv-collect/src/recv/: http.rs
bkup/obsv-grafana/src/: lib.rs
bkup/obsv-message/: Cargo.toml
bkup/obsv-message/src/channel/: webhook.rs
bkup/obsv-monitor/src/: error.rs
bkup/obsv-monitor/src/export/: file.rs
bkup/obsv-monitor/src/monitor/: http.rs
bkup/obsv-notify/src/: error.rs
bkup/obsv-status/: pnpm-lock.yaml
bkup/obsv-status/api-mock/: package.json
bkup/obsv-status/src/: app.css
bkup/obsv-status/src/routes/: +layout.svelte
bkup/obsv-test/: build.rs
bkup/obsv-test/src/: http.rs  lib.rs  test.rs
collector/: otel-collector-config.yaml
lib/obsv-grafana/: Cargo.toml
lib/obsv-grafana/src/: trace.rs
lib/obsv-message/src/: lib.rs
lib/obsv-message/src/channel/: email.rs  mod.rs
lib/obsv-notif/: Cargo.toml  README.md
lib/obsv-notif/src/channel/builtin/: email.rs
lib/obsv-otlp/: Cargo.toml  build.rs
lib/obsv-otlp/examples/: grpc-server.rs  http-server.rs
lib/obsv-otlp/src/: conv.rs  lib.rs  proto.rs
lib/obsv-otlp/src/json/: mod.rs  tests.rs
lib/obsv-otlp/src/proto/: tests.rs
lib/obsv-otlp/tests/: grpc.rs  http.rs
lib/obsv-otlp/tests/coll/: docker-compose.yml
lib/obsv-otlp/tests/sh/: data-spans.json  send-trace-grpc.sh  send-trace-http.sh  test.json
lib/obsv-status/: Cargo.toml  index.html
lib/obsv-status/src/: lib.rs  main.rs
lib/obsv-statuspage/: README.md  package-lock.json  package.json
lib/obsv-statuspage/api-mock/: pnpm-lock.yaml
lib/obsv-statuspage/api-mock/src/: db.ts  index.ts
lib/obsv-statuspage/src/: app.html
lib/obsv-statuspage/src/lib/: config.ts
lib/obsv-statuspage/src/lib/api/: index.ts  types.ts
lib/obsv-statuspage/src/routes/: +page.svelte  +page.ts
lib/obsv-statuspage/static/favicon/: favicon.afdesign
libs/obsv-core/: Cargo.toml
libs/obsv-core/src/: error.rs  http.rs  lib.rs
libs/obsv-core/src/_conn/clickhouse/: log.rs
libs/obsv-core/src/adapt/: grafana.rs  mod.rs  otlp.rs
libs/obsv-core/src/data/: context.rs  log.rs  metric.rs  mod.rs  monitor.rs  scope.rs  service.rs  trace.rs  value.rs
libs/obsv-core/src/db/: clickhouse.rs  mod.rs
libs/obsv-data/: Cargo.toml
libs/obsv-data/src/: lib.rs  log.rs  metric.rs  monitor.rs  trace.rs
libs/obsv-data/src/_conn/: mod.rs
libs/obsv-data/src/_conn/clickhouse/: attr.rs  monitor.rs
libs/obsv-data/src/_conn/otlp/: log.rs
libs/obsv-data/src/adapt/: mod.rs
libs/obsv-data/src/db/: mod.rs
libs/obsv-data/src/shared/: mod.rs
libs/obsv-not/: Cargo.toml  README.md
libs/obsv-not/src/: error.rs  lib.rs
libs/obsv-not/src/email/: mod.rs
libs/obsv-not/src/webhook/: mod.rs
libs/obsv-not/tests/: email.rs  webhook.rs
libs/obsv-not/tests/data/: email.hbs
libs/obsv-otlp/: Cargo.toml  README.md  build.rs
libs/obsv-otlp/examples/: grpc.rs  grpc_tests.rs  http.rs  http_json_tests.rs  http_proto_tests.rs
libs/obsv-otlp/otel-coll/: docker-compose.yml
libs/obsv-otlp/src/: conv.rs  lib.rs
libs/obsv-otlp/src/json/: mod.rs  tests.rs
libs/obsv-otlp/src/proto/: mod.rs  tests.rs
libs/obsv-otlp/src/server/: mod.rs
libs/obsv-otlp/src/server/grpc/: mod.rs  tests.rs
libs/obsv-otlp/src/server/http/: mod.rs  tests.rs
obsv-alert/: Cargo.toml  README.md
obsv-alert/src/: lib.rs
obsv-api/: Cargo.toml
obsv-api/src/: lib.rs
obsv-bin/: obsv.cfg.toml
obsv-bin/src/: main.rs
obsv-collect/: Cargo.toml
obsv-collect/src/: lib.rs
obsv-collect/src/expt/: clickhouse.rs  file.rs  mod.rs  stdout.rs
obsv-collect/src/proc/: batch.rs  filter.rs  id.rs  mod.rs
obsv-collect/src/recv/: grpc.rs  http.rs  mod.rs  otel.rs
obsv-collect/tests/otel-coll/: config.yaml  send-trace-ghz.sh  send-trace-grpc.sh
obsv-collector/: Cargo.toml  otel-collector-config.yaml
obsv-collector/otel-config/: otel-collector-config.yaml
obsv-collector/src/: lib.rs
obsv-collector/src/exp/: mod.rs
obsv-collector/src/recv/: mod.rs
obsv-collector/src/serv/: mod.rs
obsv-core/: Cargo.toml  README.md
obsv-core/src/: attr.rs  event.rs  lib.rs  log.rs  metric.rs  monitor.rs  trace.rs
obsv-core/src/conn/: clickhouse.rs  mod.rs  otlp.rs
obsv-core/src/conn/clickhouse/: attr.rs  event.rs  log.rs  metric.rs  mod.rs  monitor.rs  trace.rs
obsv-core/src/conn/otlp/: attr.rs  log.rs  metric.rs  mod.rs  trace.rs
obsv-core/src/convert/clickhouse/: log.rs  mod.rs
obsv-core/src/convert/otlp/: attr.rs  log.rs  metric.rs  mod.rs  trace.rs
obsv-core/src/otlp/: log.rs  metric.rs  mod.rs  trace.rs
obsv-dash/eval/plotly/: env.yaml
obsv-db/: README.md
obsv-front/: README.md
obsv-front/eval/plotly/: demo.py
obsv-monitor/: Cargo.toml  Dockerfile  README.md  monitor.cfg.toml
obsv-monitor/examples/: clickhouse.rs  hello.rs
obsv-monitor/src/: cfg.rs  error.rs  lib.rs
obsv-monitor/src/export/: clickhouse.rs  file.rs  mod.rs  stdout.rs
obsv-monitor/src/monitor/: http.rs  mod.rs
obsv-notif/: Cargo.toml
obsv-notif/src/: error.rs  lib.rs
obsv-notif/src/channel/: mod.rs
obsv-notif/src/channel/builtin/: mod.rs  webhook.rs
obsv-notify/: Cargo.toml
obsv-notify/src/: lib.rs
obsv-notify/src/rule/: db.rs  mod.rs
obsv-report/: Cargo.toml
obsv-report/src/: api.rs  lib.rs
obsv-status/src/lib/ui/charts/: LineChart.svelte
obsv-status/src/lib/ui/css/: _colors.scss
obsv-status/src/routes/: +page.svelte
obsv-store/: Cargo.toml  README.md
obsv-test/: Cargo.toml
obsv-test/tests/: send-trace-grpc.sh
obsv-tester/: Cargo.toml  README.md
obsv-tester/scripts/: send-trace-grpc.sh
obsv-tester/src/: arg.rs  error.rs  fmt.rs  grpc.rs  http.rs  lib.rs  main.rs  test.rs  trace.rs
obsv-tester/tests/: send-trace-http.sh
(+6 files in other folders)
