[package]
name = "obsv-collect"
version = "0.1.0"
edition = "2021"
description = "Data collector"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nlargueze/obsv"

[[bin]]
name = "collector"
path = "src/bin/collector.rs"

[features]
default = ["http"]
http = ["dep:hyper", "dep:serde_json"]

[dependencies]
async-trait = "0.1.68"
env_logger = "0.10.0"
hyper = { version = "0.14.26", features = ["full"], optional = true }
log = "0.4.17"
obsv-core = { version = "0.1.0", path = "../obsv-core" }
serde_json = { version = "1.0.96", optional = true }
tokio = { version = "1.28.1", features = ["full"] }
