[package]
name = "obsv-core"
version = "0.1.0"
edition = "2021"
description = "obsv structures and utilities"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nlargueze/obsv"

[features]
default = ["otlp", "clickhouse"]
otlp = ["dep:obsv-otlp", "dep:uuid"]
clickhouse = ["dep:clickhouse-client", "dep:ron"]

[dependencies]
serde = { version = "1.0.162", features = ["derive"] }
log = "0.4.17"
obsv-otlp = { version = "0.1.0", path = "../lib/obsv-otlp", optional = true }
uuid = { version = "1.3.3", features = ["v4", "fast-rng"], optional = true }
clickhouse-client = { version = "0.6.0", optional = true }
ron = { version = "0.8.0", optional = true }
