[package]
name = "obsv-core"
version = "0.1.0"
edition = "2021"
description = "obsv structures and utilities"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nlargueze/obsv"

[features]
default = ["otlp", "clickhouse"]
otlp = ["dep:obsv-otlp"]
clickhouse = ["dep:clickhouse-client", "dep:ron"]

[dependencies]
obsv-otlp = { version = "0.1.0", path = "../lib/obsv-otlp", optional = true }
clickhouse-client = { version = "0.8.0", optional = true }
serde = { version = "1.0.162", features = ["derive"] }
log = "0.4.17"
uuid = { version = "1.3.3", features = ["v4", "fast-rng"] }
ron = { version = "0.8.0", optional = true }
thiserror = "1.0.40"
async-trait = "0.1.68"
time = { version = "0.3.21", features = ["parsing", "macros", "formatting"] }

[dev-dependencies]
tokio = { version = "1.28.1", features = ["full"] }
tracing-ext = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
