[package]
name = "obsv-tester"
version = "0.1.0"
edition = "2021"
default-run = "curly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "curly"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
colored = "2.0.0"
futures = "0.3.28"
hyper = { version = "0.14.26", features = ["full"] }
serde = { version = "1.0.160", features = ["derive"] }
thiserror = "1.0.40"
time = "0.3.20"
tokio = { version = "1.27.0", features = ["full"] }
tonic = "^0.9.0"
