[package]
name = "obsv-bin"
version = "0.1.0"
edition = "2021"
description = "All-in-one observability service"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nlargueze/obsv"

[[bin]]
name = "obsv"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
obsv-otlp = { version = "0.1.0", path = "../lib/obsv-otlp" }
obsv-monitor = { version = "0.1.0", path = "../obsv-monitor" }
serde = { version = "1.0.163", features = ["derive"] }
anyhow = "1.0.71"
toml = "0.7.3"
clap = { version = "4.2.7", features = ["derive"] }
duration-str = "0.5.0"
