[package]
name = "obsv-notif"
version = "0.1.0"
edition = "2021"
description = "Notifications and built-in channels"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nlargueze/obsv"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["email", "webhook"]
email = ["dep:lettre"]
webhook = ["dep:reqwest", "dep:serde_json"]

[dependencies]
async-trait = "0.1.68"
lettre = { version = "0.10.4", features = [
    "smtp-transport",
    "builder",
    "tokio1-rustls-tls",
], optional = true, default-features = false }
reqwest = { version = "0.11.17", features = ["tokio-rustls"], optional = true }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = { version = "1.0.96", optional = true }
thiserror = "1.0.40"

[dev-dependencies]
tokio = { version = "1.28.0", features = ["full"] }
