[package]
name = "obsv-otlp"
version = "0.1.0"
edition = "2021"
description = "OpenTelemetry structs and utilities"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nlargueze/obsv"

[dependencies]
hex = "0.4.3"
hyper = { version = "0.14.26", features = ["full"] }
prost = "0.11.9"
serde = { version = "1.0.162", features = ["derive"] }
tonic = { version = "0.9.2" }

[build-dependencies]
anyhow = "1.0.71"
downloader = "0.2.7"
flate2 = "1.0.26"
tar = "0.4.38"
tonic-build = "0.9.2"
walkdir = "2.3.3"
zip-extract = "0.1.2"

[dev-dependencies]
hyper = { version = "0.14.26", features = ["http2", "http1", "client"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
