[package]
name = "obsv-otlp"
version = "0.1.0"
edition = "2021"
description = "OpenTelemetry structs and utilities"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nlargueze/obsv"

[dependencies]
hex = "0.4.3"
prost = "0.12.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
# thiserror = "1.0.48"
tonic = { version = "0.10.0" }

[build-dependencies]
anyhow = "1.0.75"
downloader = "0.2.7"
flate2 = "1.0.27"
tar = "0.4.40"
tonic-build = "0.10.0"
walkdir = "2.3.3"

[dev-dependencies]
salvo = "0.53.0"
tokio = { version = "1.32.0", features = ["full"] }
